--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -20,12 +20,12 @@
             = f.label :パスワード
             %span.formRequired 必須
             %br/
-            = f.password_field :password, autocomplete: "off", placeholder: "６文字以上", class: "inputField", required: true
+            = f.password_field :password, autocomplete: "off", placeholder: "６文字以上", class: "inputField", required: false
           .deviseForm__field
             = f.label :パスワード（確認）
             %span.formRequired 必須
             %br/
-            = f.password_field :password_confirmation, autocomplete: "off", placeholder: "６文字以上", class: "inputField", required: true
+            = f.password_field :password_confirmation, autocomplete: "off", placeholder: "６文字以上", class: "inputField", required: false
           .deviseForm__actions
             = f.submit "次へ進む", class: "deviseBtn"
   =render "devise/shared/footer"
