--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -151,3 +151,6 @@
 = render "shared/banner"
 = render "shared/footer"
 = render "shared/purchaseBtn"
+
+- @products.each do |product|
+  = product.name
