--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -12,10 +12,16 @@
               %span.formRequired 必須
               %br/
               %p 最大4枚までアップロードできます
-              %ul.formUploader
-                .uploadInfo
-                  %p ドラッグアンドドロップ
-                  %span またはクリックしてアップロード
+              = f.fields_for :images do |i|
+                = i.label :src, class:'formUploader', id:'previews' do
+                  - if @product.persisted?
+                    - @product.images.each_with_index do |image, i|
+                      = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+                  .uploadInfo#image-box
+                    .js-file_group{data: {index: i.index}}
+                      = i.file_field :src, class: "js-file"
+                      %p ドロップアンドドラッグ<br>またはクリックしてファイルをアップロード
+                      -# %span.js-remove 削除
           .formSection
             .productForm__field
               = f.label :商品名
@@ -32,20 +38,22 @@
               %h3 商品の詳細
             .contentRight
               .productForm__field.productForm__field--category
-                = f.label :カテゴリー
-                %span.formRequired 必須
-                %br/
-                = f.collection_select(:size, [], :id , :name, {prompt: "---"}, {class: "inputField inputField__select", id: "category", required: true})
+                = f.label :ancestry_id do
+                  カテゴリー
+                  %span.formRequired 必須
+                  %br/
+                .select-wrap
+                  = f.collection_select(:category_id, @parents, :id , :name, {prompt: "---"}, {class: "inputField inputField__select", id: "category", required: false})
               .productForm__field
                 = f.label :ブランド
-                %br/
-                = f.text_field :size, placeholder: "例) ルイ ヴィトン"
+                %br
+                = f.collection_select(:brand_id, Brand.all, :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: false})
               .resultLists
               .productForm__field
                 = f.label :商品の状態
                 %span.formRequired 必須
                 %br/
-                = f.select(:status, [["新品/未使用", 0], ["未使用に近い", 1], ["目立った傷や汚れなし", 2], ["やや傷や汚れあり", 3], ["傷や汚れあり", 4], ["状態が悪い", 5]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select(:state_id, State.all, :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
           .formSection
             .contentLeft
               %h3
@@ -58,17 +66,17 @@
                 = f.label :配送料の負担
                 %span.formRequired 必須
                 %br/
-                = f.select(:shipping_fee, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select(:shopping_fee_id, ShoppingFee.all, :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
               .productForm__field
                 = f.label :発送元の地域
                 %span.formRequired 必須
                 %br/
-                = f.collection_select(:price, [], :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
               .productForm__field
                 = f.label :発送までの日数
                 %span.formRequired 必須
                 %br/
-                = f.select(:expected_date, [["1-2日で発送", 0], ["2-3日で発送", 1], ["4-7日で発送", 2]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select(:expected_date_id, ExpectedDate.all, :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
           .formSection
             .contentLeft
               %h3
@@ -87,10 +95,10 @@
               .profitholder
                 %ul
                   %li 販売手数料（10%）
-                  %li -
+                  %li#sall_fee -
                 %ul.profitholder--output
                   %li 販売利益
-                  %li -
+                  %li#sall_profit -
           .formSection
             .confirmation
               %p
