--- a/app/views/shared/_purchaseBtn.html.haml
+++ b/app/views/shared/_purchaseBtn.html.haml
@@ -1,10 +1,5 @@
 
-= link_to "" do
+= link_to new_product_path do
   .purchaseBtn
     %span.purchaseBtn__text 出品
     =fa_icon "camera", class: "fa-4x purchaseBtn__icon"
-
-= link_to "" do
-  .purchaseBtn
-    %span.purchaseBtn__text 出品
-    = fa_icon "camera", class: "fa-4x purchaseBtn__icon"
