商品購入機能

--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -363,6 +363,17 @@
             }
           }
         }
+
+        .card{
+          .card-body{
+            .btn.btn-primary{
+              width: 100%;
+              background-color: red;
+              color: white;
+              border-radius: 20px;
+            }
+          }
+        }
         .buyBtn {
         }
         .itemDetail {
