--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -1,5 +1,5 @@
 .productList
-  = link_to "" do
+  = link_to product_path(product) do
     .soldout--small
     .soldoutText--small 販売中
     %figure.productList--img
