--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,11 +2,7 @@
 %nav.breadCrumbs
   %ul
     %li
-      = link_to "メルカリ", root_path
-    %li
-      = fa_icon "angle-right"
-    %li
-      %p マイページ
+      =render 'shared/breadcrumbs'
 .main
   .contents
     = render "leftcontent"
