--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,5 @@
     %script{type: "text/javascript"}
       Payjp.setPublicKey('pk_test_97014a8d2666df9430eaff84');
   %body
+    = render 'layouts/notifications'
     = yield
