--- a/app/views/shared/_breadcrumbs.html.haml
+++ b/app/views/shared/_breadcrumbs.html.haml
@@ -1,5 +1,9 @@
 - case params.values_at :controller, :action
 
+
+- when ['products', 'search']
+  - breadcrumb :products_search
+
 - when ['users', 'show']
   - breadcrumb :user_show
 
