--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -10,7 +10,7 @@
       .details
         %ul
           %li
-            = product.price
+            = "#{product.price}円"
           %li
             = fa_icon "heart", class: "likeIcon", text: "hoge"
         %p (税込)
