--- a/app/views/shared/_breadcrumbs.html.haml
+++ b/app/views/shared/_breadcrumbs.html.haml
@@ -4,6 +4,9 @@
 - when ['products', 'search']
   - breadcrumb :products_search
 
+- when ['products', 'show']
+  - breadcrumb :product_show
+
 - when ['users', 'show']
   - breadcrumb :user_show
 
