--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -322,8 +322,10 @@
             }
             li {
               float: left;
+              .itemBox_image{
+                margin: 0 5px;
+              }
               &:last-child {
-                margin: 0 0 0 10px;
                 table {
                   max-width: 300px;
                   height: 375px;
@@ -370,7 +372,8 @@
               width: 100%;
               background-color: red;
               color: white;
-              border-radius: 20px;
+              height: 50px;
+              font-weight: bold;
             }
           }
         }
