--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,23 +2,7 @@
 %nav.breadCrumbs
   %ul
     %li
-      = link_to "メルカリ", root_path
-    %li
-      = fa_icon "angle-right"
-    %li
-      = link_to "hoge", ""
-    %li
-      = fa_icon "angle-right"
-    %li
-      = link_to "fuga", ""
-    %li
-      = fa_icon "angle-right"
-    %li
-      = link_to "piyo", ""
-    %li
-      = fa_icon "angle-right"
-    %li
-      %p 名前
+      =render 'shared/breadcrumbs'
 .main
   .showMain
     .contentLeft
@@ -36,43 +20,55 @@
                 .soldout
                 .soldoutText 販売中
                 %ul
-                  %li
-                    = image_tag "", size: "75x75"
+                  - if @product.images.second
+                    %li.itemBox_image
+                      = image_tag "#{@product.images.second.src}", size: "75x75"
+                  - if @product.images.third
+                    %li.itemBox_image
+                      = image_tag "#{@product.images.third.src}", size: "75x75"
+                  - if @product.images.fourth
+                    %li.itemBox_image
+                      = image_tag "#{@product.images.fourth.src}", size: "75x75"
               %li.table
                 %table
                   %tbody
                     %tr
                       %th 出品者
                       %td
-                        = @product.user.nickname
+                        = @product.seller.nickname
                     %tr
                       %th カテゴリー
                       %td
-                        = link_to "メインカテゴリー", ""
+                        = link_to "#{@product.category.root.name}", ""
                         %br
-                        = link_to ">サブカテゴリー", ""
+                        = link_to ">#{@product.category.parent.name}", ""
                         %br
                         = link_to ">#{@product.category.name}", ""
                     %tr
                       %th ブランド
                       %td
                         = link_to "#{@product.brand.name}", "#"
-                    %tr
-                      %th 商品のサイズ
-                      %td これくらい
+                    - if @product.size.present?
+                      %tr
+                        %th 商品のサイズ
+                        %td
+                          = @product.size
                     %tr
                       %th 商品の状態
-                      %td こんなもん
+                      %td
+                        = @product_state.name
                     %tr
                       %th 配送料の負担
-                      %td 100円
+                      %td
+                        = @product_shopping_fee.name
                     %tr
                       %th 発送元の地域
                       %td
-                        = link_to "", ""
+                        = @product_prefecture.name
                     %tr
                       %th 発送日の目安
-                      %td 3日
+                      %td
+                        = @product_expected_date.name
           .itemBox__price
             %span
               = "#{@product.price}円"
@@ -85,12 +81,15 @@
               .card__body
                 = submit_tag("購入する", class: "card__body__btn-primary")
             = link_to "カード登録画面に戻る", new_card_path, class: "btn btn-info clerfix"
-        - if @product.user_id == current_user.id
-          .product__delete
-            = form_for(product_path(@product), method: :delete) do
-              .product__delete__body
-                = submit_tag("削除する", class: "product__delete__body__btn")
-          .itemDetail 詳細情報
+
+            - if @product.seller_id == current_user.id
+              .product__delete
+                = form_for(product_path(@product), method: :delete) do
+                  .product__delete__body
+                    = submit_tag("削除する", class: "product__delete__body__btn")
+          .itemDetail
+            詳細情報<br>
+            = @product.detail
           %ul
             - if user_signed_in?
               %li.optionalBtn.likeBtn.likeBtn--red{id: "unlikeBtn"}
@@ -143,14 +142,17 @@
         -#           = fa_icon "comment", text: "コメントする"
       %ul.links
         %li
-          = link_to "#" do
-            = fa_icon "angle-left"
-            %span
-            前の商品
+          - if @product_previous
+            = link_to product_path(@product_previous) do
+              = fa_icon "angle-left"
+              %span
+              = @product_previous.name
         %li
-          = link_to "#" do
-            %span 後ろの商品
-            = fa_icon "angle-right"
+          - if @product_next
+            = link_to product_path(@product_next) do
+              = fa_icon "angle-right"
+              %span
+              = @product_next.name
       .relatedItems
         = link_to "カテゴリをもっと見る", ""
 
