--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -26,6 +26,8 @@
             %span.formRequired 必須
             %br/
             = f.password_field :password_confirmation, autocomplete: "off", placeholder: "６文字以上", class: "inputField", required: false
+          .deviseForm__field
+            = recaptcha_tags
           .deviseForm__actions
             = f.submit "次へ進む", class: "deviseBtn"
   =render "devise/shared/footer"
