--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,14 @@
-.sign_up
-  .mail
-    = link_to"新規会員登録", new_user_registration_path, class: "deviseBtn--blue"
-  .facebook
-    = link_to "Facebookで登録",user_facebook_omniauth_authorize_path
-  .google
-    = link_to "Googleで登録",user_google_oauth2_omniauth_authorize_path
+
+.devise
+  = render "devise/shared/header"
+  .deviseSection
+    .inner.inner--narrow
+      .title.title--narrow
+        %p.newText 新規会員登録
+        = link_to"メールアドレスで登録", new_user_registration_path, class: "deviseBtn--skyblue"
+        .deviseBtn--blue.btn--sns
+          = link_to "Facebookで登録",user_facebook_omniauth_authorize_path
+          .sns--i
+            = fa_icon 'facebook'
+        = link_to "Googleで登録",user_google_oauth2_omniauth_authorize_path, class: "deviseBtn--white btn--sns"
+  = render "devise/shared/footer"
