user_new_btn_gray

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -5,7 +5,7 @@
     .inner.inner--narrow
       .title.title--narrow
         %p.newText 新規会員登録
-        = link_to"メールアドレスで登録", new_user_registration_path, class: "deviseBtn--skyblue"
+        = link_to"メールアドレスで登録", new_user_registration_path, class: "deviseBtn--gray"
         .deviseBtn--blue.btn--sns
           = link_to "Facebookで登録",user_facebook_omniauth_authorize_path
           .sns--i
