--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -80,6 +80,18 @@
             text-decoration: none;
             border: solid 1px;
           }
+          .deviseBtn--gray{
+            display: block;
+            height: 40px;
+            margin: 40px 0;
+            text-align: center;
+            width: 318px;
+            font-size: 12px;
+            line-height: 40px;
+            background: $hexWhite;
+            color: black;
+            text-decoration: none;
+          }
           .btn--sns{
             position: relative;
             .sns--i{
