--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,10 +4,10 @@
       %h1.icon
         = link_to image_tag("logo.svg", size: "134x36"), root_path
       .searchBox
-        = form_tag "/products/search", method: :get do
-          %input.searchBox--input{id: "searchInput", name: "keyword",placeholder: "キーワードから探す"}
-            =button_to type: "submit" do
-              =fa_icon "search"
+        = search_form_for(@search, url: products_search_path) do |f|
+          = f.search_field(:name_cont, class: "searchBox--input", id: "searchInput",placeholder: "何かお探しですか？", type: '')
+          = button_to type: "submit" do
+            =fa_icon "search"
       %ul.resultLists
     .nav.clearfix
       %ul.listsLeft
