--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -83,10 +83,14 @@
             = link_to "カード登録画面に戻る", new_card_path, class: "btn btn-info clerfix"
 
             - if @product.seller_id == current_user.id
-              .product__delete
+              .product-edit
+                = form_tag(edit_product_path(@product), method: :get) do
+                  .product-edit__body
+                    = submit_tag("編集する", class: "product-edit__body__btn")
+              .product-delete
                 = form_for(product_path(@product), method: :delete) do
-                  .product__delete__body
-                    = submit_tag("削除する", class: "product__delete__body__btn")
+                  .product-delete__body
+                    = submit_tag("削除する", class: "product-delete__body__btn")
           .itemDetail
             詳細情報<br>
             = @product.detail
