--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -741,3 +741,64 @@
   right: -40px;
 }
 //end
+
+//product-preview_js
+#previews1{
+  display: flex;
+}
+.previews2{
+  display: none;
+}
+.preview{
+  display: flex;
+  position: relative;
+}
+
+.js-file_group {
+  width: 100%;
+  font-size: 14px;
+  background-color: #f5f5f5;
+  border: 0.5px dashed #ccc;
+  min-height: 184px;
+  position: relative;
+}
+
+.preview_js{
+  width: 157px;
+  height: 187px;
+  position: relative;
+}
+
+.js-edit{
+  width: 63.3px;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  line-height: 30px;
+  border: 1px solid black;
+  background-color: skyblue;
+  opacity: 0.5;
+}
+
+.js-remove{
+  width: 63.3px;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 63.3px;
+  line-height: 30px;
+  border: 1px solid black;
+  background-color: skyblue;
+  opacity: 0.5;
+}
+
+.none{
+  position: absolute;
+  width: 0;
+}
+.display-flex{
+  display: flex;
+}
+//
