--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -8,15 +8,48 @@
           %span.formRequired 必須
           %br/
           %p 最大4枚までアップロードできます
-          = f.fields_for :images do |i|
-            = i.label :src, class:'formUploader', id:'previews' do
+          #image-box
+            #previews1
+              - if @product.images.length <= 5
+                - if @product.persisted?
+                  - @product.images.each_with_index do |image, i|
+                    = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+              = f.fields_for :images do |image|
+                = image.label :src, "ドロップアンドドラッグまたはクリックしてファイルをアップロード", class:'js-file_group',"data-index": image.index do
+                  = image.file_field :src, class: 'js-file'
+                - if @product.persisted?
+                  = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
               - if @product.persisted?
-                - @product.images.each_with_index do |image, i|
-                  = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
-              .uploadInfo#image-box
-                .js-file_group{data: {index: i.index}}
-                  = i.file_field :src, class: "js-file"
-                  %p ドロップアンドドラッグ<br>またはクリックしてファイルをアップロード
+                .js-file_group{"data-index" => "#{@product.images.count}"}
+                  = file_field_tag :src, name: "product[images_attributes][#{@product.images.count}][src]", class: 'js-file'
+                  .js-remove 削除
+            .previews2
+              - if @product.images.length >= 5
+                - if @product.persisted?
+                  - @product.images.each_with_index do |image, i|
+                    = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+              = f.fields_for :images do |image|
+                = image.label :src, "ドロップアンドドラッグまたはクリックしてファイルをアップロード", class:'js-file_group',"data-index": image.index do
+                  = image.file_field :src, class: 'js-file'
+                - if @product.persisted?
+                  = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
+              - if @product.persisted?
+                .js-file_group{"data-index" => "#{@product.images.count}"}
+                  = file_field_tag :src, name: "product[images_attributes][#{@product.images.count}][src]", class: 'js-file'
+                  .js-remove 削除
+
+
+          -# .images
+          -#   #preview-box
+          -#     = f.fields_for :images do |i|
+          -#       = i.label :src, class:'formUploader', id:'previews' do
+          -#         - if @product.persisted?
+          -#           - @product.images.each_with_index do |image, i|
+          -#             = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+          -#         .uploadInfo#image-box
+          -#           .js-file_group{data: {index: i.index}}
+          -#             = i.file_field :src, class: "js-file"
+          -#             %p ドロップアンドドラッグ<br>またはクリックしてファイルをアップロード
       .formSection
         .productForm__field
           = f.label :商品名
