--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -250,3 +250,36 @@
     font-weight: bold;
   }
 }
+
+.inputField-half{
+  width: calc(100% - 32px);
+  margin: 8px 0 0;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 28px;
+}
+#birthday_birthday_1i{
+  width: 25%;
+  margin: 8px 0 0;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 28px;
+}
+#birthday_birthday_2i{
+  width: 25%;
+  margin: 8px 0 0;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 28px;
+}
+#birthday_birthday_3i{
+  width: 25%;
+  margin: 8px 0 0;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 28px;
+}
