--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -500,16 +500,20 @@ body {
 
 .childcategoryTree{
     position: absolute;
-    left: 263px;
-    background-color: red;
-    border: solid;
+    left: 263px; 
+    background-color: #fff;
     width: 35%;
+    &--item{
+      border: 1px solid #f5f5f5;
+    }
 }
 
 .grandchildcategoryTree{
   position: absolute;
-  left: 545px;
-  background-color: white;
-  border: solid;
+  left: 539px;
+  background-color:#fff;
   width: 35%;
+  a{
+    border: 1px solid #f5f5f5;
+  }
 }
