商品出品コントローラーテスト

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title mercari
+    %title フリマ
     = csrf_meta_tags
     %script{:crossorigin => "anonymous", :integrity => "sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=", :src => "https://code.jquery.com/jquery-3.4.0.min.js"}
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
