--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.pcFooter
   %ul.contents
     %li.content
-      %h2.content__head メルカリについて
+      %h2.content__head フリマについて
       %ul
         %li
           = link_to "会社概要（運営会社）", "https://about.mercari.com/"
